refactor: remove database player consumer implementation